Fix bugs, print patient id.

--- a/src/com/lehanh/pama/ui/patientcase/messages.properties
+++ b/src/com/lehanh/pama/ui/patientcase/messages.properties
@@ -72,6 +72,7 @@ PrescriptionView_18=x
 PrescriptionView_19=\ 
 PrescriptionView_23=(
 PrescriptionView_24=) 
+PrescriptionView_bacsy=Bác s\u1EF9
 PrescriptionView_benhnhan=B\u1EC7nh nhân: 
 PrescriptionView_cachdung=Cách dùng :
 PrescriptionView_chandoan=Ch\u1EA9n \u0111oán: 
@@ -92,21 +93,26 @@ PrescriptionView_luulamtoamau=L\u01B0u làm toa m\u1EABu
 PrescriptionView_luuy=L\u01B0u ý :
 PrescriptionView_moi=L\u01B0u
 PrescriptionView_msbenhnhan=MS B\u1EC7nh nhân: 
+PrescriptionView_nam=\ n\u0103m 
 PrescriptionView_ngaydung=Ngày dùng :
 PrescriptionView_ngay=Ngày: 
 PrescriptionView_ngayin=Ngày in :
+PrescriptionView_ngaytaikham=Ngày tái khám: 
 PrescriptionView_nhapsocholandungtrongngay=Nh\u1EADp s\u1ED1 cho L\u1EA7n dùng trong ngày\!
 PrescriptionView_nhapsochosongay=Nh\u1EADp s\u1ED1 cho S\u1ED1 ngày\!
 PrescriptionView_nhapsochosothuocmoilan=Nh\u1EADp s\u1ED1 cho S\u1ED1 thu\u1ED1c m\u1ED5i l\u1EA7n\!
 PrescriptionView_nhaptencuatoamau=Nh\u1EADp tên c\u1EE7a toa m\u1EA9u \!
+PrescriptionView_pgstslehanh=PGS.TS Lê Hành
 PrescriptionView_soluong=S\u1ED1 l\u01B0\u1EE3ng
 PrescriptionView_songay=S\u1ED1 ngày :
 PrescriptionView_taomoi=T\u1EA1o M\u1EDBi
 PrescriptionView_tengoc=Tên g\u1ED1c :
 PrescriptionView_tenthuoc=Tên thu\u1ED1c :
+PrescriptionView_thang=\ tháng 
 PrescriptionView_thuockhac=Thu\u1ED1c khác :
 PrescriptionView_toathuoc=Toa Thu\u1ED1c
 PrescriptionView_toathuocmau=Toa thu\u1ED1c m\u1EABu
+PrescriptionView_tphcmngay=Tp HCM, ngày 
 PrescriptionView_tuoi=Tu\u1ED5i: 
 PrescriptionView_xemghichuthuoc=Xem ghi chú thu\u1ED1c
 PrescriptionView_xoadong=Xóa dòng
