--- a/src/com/lehanh/pama/ui/patientcase/messages.properties
+++ b/src/com/lehanh/pama/ui/patientcase/messages.properties
@@ -1,125 +1,128 @@
+#Eclipse modern messages class
+#Sun Aug 28 12:16:33 ICT 2016
+DetailImageView_hienlankhamtrong=Hi\u1EC7n l\u1EA7n khám tr\u1ED1ng
 ExamVersionComboViewer_dangthuchien=\ (\u0111ang th\u1EF1c hi\u1EC7n)
 ExamVersionComboViewer_langannhat=\ (l\u1EA7n g\u1EA7n nh\u1EA5t)
-ExamVersionComboViewer_ngayden=Ngày \u0111\u1EBFn
+ExamVersionComboViewer_ngayden=Ng\u00E0y \u0111\u1EBFn
 ExamVersionComboViewer_phauthuat=Ph\u1EA9u thu\u1EADt
 ExamVersionComboViewer_thuchien=Th\u1EF1c hi\u1EC7n
 ExamVersionComboViewer_thutu=Th\u1EE9 t\u1EF1
-PatientCaseView_benhanmoi=B\u1EC7nh án m\u1EDBi
+PatientCaseView_benhanmoi=B\u1EC7nh \u00E1n m\u1EDBi
 PatientCaseView_bienchung=Bi\u1EBFn ch\u1EE9ng
-PatientCaseView_bstuvan=Bác s\u1EF9 t\u01B0 v\u1EA5n:
-PatientCaseView_chandoan=Ch\u1EA9n \u0111oán:
+PatientCaseView_bstuvan=B\u00E1c s\u1EF9 t\u01B0 v\u1EA5n\:
+PatientCaseView_chandoan=Ch\u1EA9n \u0111o\u00E1n\:
 PatientCaseView_chinhsua=Ch\u1EC9nh s\u1EEDa
 PatientCaseView_chon=Ch\u1ECDn
-PatientCaseView_chonbenhan=Ch\u1ECDn b\u1EC7nh án:
+PatientCaseView_chonbenhan=Ch\u1ECDn b\u1EC7nh \u00E1n\:
 PatientCaseView_chonbs=Ch\u1ECDn BS
-PatientCaseView_chonlankham=Ch\u1ECDn l\u1EA7n khám:
-PatientCaseView_de=\u0110\u1EC3:
-PatientCaseView_dichvu=D\u1ECBch v\u1EE5:
-PatientCaseView_ghichu=Ghi chú:
-PatientCaseView_ghichutubacsi=Ghi chú t\u1EEB bác s\u1EF9:
-PatientCaseView_ghichutukhach=Ghi chú t\u1EEB khách:
-PatientCaseView_hailong=Hài lòng
+PatientCaseView_chonlankham=Ch\u1ECDn l\u1EA7n kh\u00E1m\:
+PatientCaseView_de=\u0110\u1EC3\:
+PatientCaseView_dichvu=D\u1ECBch v\u1EE5\:
+PatientCaseView_ghichu=Ghi ch\u00FA\:
+PatientCaseView_ghichutubacsi=Ghi ch\u00FA t\u1EEB b\u00E1c s\u1EF9\:
+PatientCaseView_ghichutukhach=Ghi ch\u00FA t\u1EEB kh\u00E1ch\:
+PatientCaseView_hailong=H\u00E0i l\u00F2ng
 PatientCaseView_huy=H\u1EE7y
 PatientCaseView_inphieu=In phi\u1EBFu
-PatientCaseView_loikhuyencuabs=L\u1EDDi khuyên c\u1EE7a bác s\u1EF9:
+PatientCaseView_loikhuyencuabs=L\u1EDDi khuy\u00EAn c\u1EE7a b\u00E1c s\u1EF9\:
 PatientCaseView_loinhaplieu=L\u1ED5i nh\u1EADp li\u1EC7u
 PatientCaseView_luu=L\u01B0u
-PatientCaseView_ngayhen=Ngày h\u1EB9n:
-PatientCaseView_ngaymo=Ngày m\u1ED5
-PatientCaseView_ngaypt=Ngày PT:
-PatientCaseView_ngoaids=Ngoài Danh sách:
-PatientCaseView_phauthuat=Ph\u1EA9u thu\u1EADt:
-PatientCaseView_thamkham=Th\u0103m khám
-PatientCaseView_thongtinphauthuat=Thông tin ph\u1EA9u thu\u1EADt 
-PatientCaseView_thongtintuvanthamkham=Thông tin t\u01B0 v\u1EA5n - th\u0103m khám
-PatientCaseView_thuthuat=Th\u1EE7 thu\u1EADt:
-PatientCaseView_trieuchung=Tri\u1EC7u ch\u1EE9ng:
+PatientCaseView_ngayhen=Ng\u00E0y h\u1EB9n\:
+PatientCaseView_ngaymo=Ng\u00E0y m\u1ED5
+PatientCaseView_ngaypt=Ng\u00E0y PT\:
+PatientCaseView_ngoaids=Ngo\u00E0i Danh s\u00E1ch\:
+PatientCaseView_phauthuat=Ph\u1EA9u thu\u1EADt\:
+PatientCaseView_thamkham=Th\u0103m kh\u00E1m
+PatientCaseView_thongtinphauthuat=Th\u00F4ng tin ph\u1EA9u thu\u1EADt 
+PatientCaseView_thongtintuvanthamkham=Th\u00F4ng tin t\u01B0 v\u1EA5n - th\u0103m kh\u00E1m
+PatientCaseView_thuthuat=Th\u1EE7 thu\u1EADt\:
+PatientCaseView_trieuchung=Tri\u1EC7u ch\u1EE9ng\:
 PatientCaseView_tuvan=T\u01B0 v\u1EA5n
-PatientInfoView_anhbenhnhan=\u1EA2nh b\u1EC7nh nhân
-PatientInfoView_benhsu=B\u1EC7nh s\u1EED:
+PatientInfoView_anhbenhnhan=\u1EA2nh b\u1EC7nh nh\u00E2n
+PatientInfoView_benhsu=B\u1EC7nh s\u1EED\:
 PatientInfoView_chinhsua=Ch\u1EC9nh s\u1EEDa
-PatientInfoView_chitiettuvanthamkham=Chi ti\u1EBFt t\u01B0 v\u1EA5n - th\u0103m khám
+PatientInfoView_chitiettuvanthamkham=Chi ti\u1EBFt t\u01B0 v\u1EA5n - th\u0103m kh\u00E1m
 PatientInfoView_chonanh=Ch\u1ECDn \u1EA3nh
-PatientInfoView_chuaxacdinh=Ch\u01B0a xác \u0111\u1ECBnh
-PatientInfoView_dd=D\u0110:
-PatientInfoView_diachi=\u0110\u1ECBa ch\u1EC9:
-PatientInfoView_dienthoai=\u0110i\u1EC7n tho\u1EA1i:
-PatientInfoView_ghichuvebenhnhan=Ghi chú v\u1EC1 b\u1EC7nh nhân:
-PatientInfoView_hoten=H\u1ECD & tên:
+PatientInfoView_chuaxacdinh=Ch\u01B0a x\u00E1c \u0111\u1ECBnh
+PatientInfoView_dd=D\u0110\:
+PatientInfoView_diachi=\u0110\u1ECBa ch\u1EC9\:
+PatientInfoView_dienthoai=\u0110i\u1EC7n tho\u1EA1i\:
+PatientInfoView_ghichuvebenhnhan=Ghi ch\u00FA v\u1EC1 b\u1EC7nh nh\u00E2n\:
+PatientInfoView_hoten=H\u1ECD & t\u00EAn\:
 PatientInfoView_huy=H\u1EE7y
 PatientInfoView_loinhaplieu=L\u1ED5i nh\u1EADp li\u1EC7u
 PatientInfoView_luu=L\u01B0u
-PatientInfoView_mdtinhthan=M\u0111 tinh th\u1EA7n:
+PatientInfoView_mdtinhthan=M\u0111 tinh th\u1EA7n\:
 PatientInfoView_nam=Nam
-PatientInfoView_ngaysinh=Ngày sinh:
+PatientInfoView_ngaysinh=Ng\u00E0y sinh\:
 PatientInfoView_nghenghiep=Ngh\u1EC1 nghi\u1EC7p
-PatientInfoView_nhapngay=Nh\u1EADp ngày
+PatientInfoView_nhapngay=Nh\u1EADp ng\u00E0y
 PatientInfoView_nu=N\u1EEF
-PatientInfoView_themmoi=Thêm m\u1EDBi
-PatientInfoView_tiencan=Ti\u1EC1n c\u0103n:
+PatientInfoView_themmoi=Th\u00EAm m\u1EDBi
+PatientInfoView_tiencan=Ti\u1EC1n c\u0103n\:
 PatientInfoView_tuoi=tu\u1ED5i
-PrescriptionTable_cachdung=Cách dùng
+PrescriptionTable_cachdung=C\u00E1ch d\u00F9ng
 PrescriptionTable_cuuong=C\u1EED u\u1ED1ng
 PrescriptionTable_donvi=\u0110\u01A1n v\u1ECB
-PrescriptionTable_landung=L\u1EA7n dùng
-PrescriptionTable_luuy=L\u01B0u ý
-PrescriptionTable_ngaydung=Ngày dùng
-PrescriptionTable_songay=S\u1ED1 ngày
-PrescriptionTable_tengoc=Tên g\u1ED1c
-PrescriptionTable_tenthuoc=Tên thu\u1ED1c
+PrescriptionTable_landung=L\u1EA7n d\u00F9ng
+PrescriptionTable_luuy=L\u01B0u \u00FD
+PrescriptionTable_ngaydung=Ng\u00E0y d\u00F9ng
+PrescriptionTable_songay=S\u1ED1 ng\u00E0y
+PrescriptionTable_tengoc=T\u00EAn g\u1ED1c
+PrescriptionTable_tenthuoc=T\u00EAn thu\u1ED1c
 PrescriptionView_17=)
 PrescriptionView_18=x 
 PrescriptionView_19=\ 
 PrescriptionView_23=(
 PrescriptionView_24=) 
-PrescriptionView_bacsy=Bác s\u1EF9
-PrescriptionView_benhnhan=B\u1EC7nh nhân: 
-PrescriptionView_cachdung=Cách dùng :
-PrescriptionView_chandoan=Ch\u1EA9n \u0111oán: 
+PrescriptionView_bacsy=B\u00E1c s\u1EF9
+PrescriptionView_benhnhan=B\u1EC7nh nh\u00E2n\: 
+PrescriptionView_cachdung=C\u00E1ch d\u00F9ng \:
+PrescriptionView_chandoan=Ch\u1EA9n \u0111o\u00E1n\: 
 PrescriptionView_chitiet=Chi ti\u1EBFt
-PrescriptionView_chuahapdanhsachthuoc=Ch\u01B0a nh\u1EADp danh sách thu\u1ED1c \!
-PrescriptionView_cuuong=C\u1EED u\u1ED1ng :
-PrescriptionView_diachi=\u0110\u1ECBa ch\u1EC9: 
-PrescriptionView_dongvi=\u0110\u01A1n v\u1ECB :
-PrescriptionView_gioitinh=Gi\u1EDBi tinh: 
+PrescriptionView_chuahapdanhsachthuoc=Ch\u01B0a nh\u1EADp danh s\u00E1ch thu\u1ED1c \!
+PrescriptionView_cuuong=C\u1EED u\u1ED1ng \:
+PrescriptionView_diachi=\u0110\u1ECBa ch\u1EC9\: 
+PrescriptionView_dongvi=\u0110\u01A1n v\u1ECB \:
+PrescriptionView_gioitinh=Gi\u1EDBi tinh\: 
 PrescriptionView_huongdan=H\u01B0\u1EDBng d\u1EABn
 PrescriptionView_huy=H\u1EE7y
 PrescriptionView_in=IN
-PrescriptionView_landung=L\u1EA7n dùng :
-PrescriptionView_lanmoilan=\ \ \ \ l\u1EA7n, m\u1ED7i l\u1EA7n:
+PrescriptionView_landung=L\u1EA7n d\u00F9ng \:
+PrescriptionView_lanmoilan=\    l\u1EA7n, m\u1ED7i l\u1EA7n\:
 PrescriptionView_loinhaplieu=L\u1ED5i nh\u1EADp li\u1EC7u
-PrescriptionView_luudong=L\u01B0u dòng
-PrescriptionView_luulamtoamau=L\u01B0u làm toa m\u1EABu
-PrescriptionView_luuy=L\u01B0u ý :
+PrescriptionView_luudong=L\u01B0u d\u00F2ng
+PrescriptionView_luulamtoamau=L\u01B0u l\u00E0m toa m\u1EABu
+PrescriptionView_luuy=L\u01B0u \u00FD \:
 PrescriptionView_moi=L\u01B0u
-PrescriptionView_msbenhnhan=MS B\u1EC7nh nhân: 
+PrescriptionView_msbenhnhan=MS B\u1EC7nh nh\u00E2n\: 
 PrescriptionView_nam=\ n\u0103m 
-PrescriptionView_ngaydung=Ngày dùng :
-PrescriptionView_ngay=Ngày: 
-PrescriptionView_ngayin=Ngày in :
-PrescriptionView_ngaytaikham=Ngày tái khám: 
-PrescriptionView_nhapsocholandungtrongngay=Nh\u1EADp s\u1ED1 cho L\u1EA7n dùng trong ngày\!
-PrescriptionView_nhapsochosongay=Nh\u1EADp s\u1ED1 cho S\u1ED1 ngày\!
+PrescriptionView_ngay=Ng\u00E0y\: 
+PrescriptionView_ngaydung=Ng\u00E0y d\u00F9ng \:
+PrescriptionView_ngayin=Ng\u00E0y in \:
+PrescriptionView_ngaytaikham=Ng\u00E0y t\u00E1i kh\u00E1m\: 
+PrescriptionView_nhapsocholandungtrongngay=Nh\u1EADp s\u1ED1 cho L\u1EA7n d\u00F9ng trong ng\u00E0y\!
+PrescriptionView_nhapsochosongay=Nh\u1EADp s\u1ED1 cho S\u1ED1 ng\u00E0y\!
 PrescriptionView_nhapsochosothuocmoilan=Nh\u1EADp s\u1ED1 cho S\u1ED1 thu\u1ED1c m\u1ED5i l\u1EA7n\!
-PrescriptionView_nhaptencuatoamau=Nh\u1EADp tên c\u1EE7a toa m\u1EA9u \!
-PrescriptionView_pgstslehanh=PGS.TS Lê Hành
+PrescriptionView_nhaptencuatoamau=Nh\u1EADp t\u00EAn c\u1EE7a toa m\u1EA9u \!
+PrescriptionView_pgstslehanh=PGS.TS L\u00EA H\u00E0nh
 PrescriptionView_soluong=S\u1ED1 l\u01B0\u1EE3ng
-PrescriptionView_songay=S\u1ED1 ngày :
+PrescriptionView_songay=S\u1ED1 ng\u00E0y \:
 PrescriptionView_taomoi=T\u1EA1o M\u1EDBi
-PrescriptionView_tengoc=Tên g\u1ED1c :
-PrescriptionView_tenthuoc=Tên thu\u1ED1c :
-PrescriptionView_thang=\ tháng 
-PrescriptionView_thuockhac=Thu\u1ED1c khác :
+PrescriptionView_tengoc=T\u00EAn g\u1ED1c \:
+PrescriptionView_tenthuoc=T\u00EAn thu\u1ED1c \:
+PrescriptionView_thang=\ th\u00E1ng 
+PrescriptionView_thuockhac=Thu\u1ED1c kh\u00E1c \:
 PrescriptionView_toathuoc=Toa Thu\u1ED1c
 PrescriptionView_toathuocmau=Toa thu\u1ED1c m\u1EABu
-PrescriptionView_tphcmngay=Tp HCM, ngày 
-PrescriptionView_tuoi=Tu\u1ED5i: 
-PrescriptionView_xemghichuthuoc=Xem ghi chú thu\u1ED1c
-PrescriptionView_xoadong=Xóa dòng
-SurgeryGallary_benhanthu=B\u1EC7nh án th\u1EE9 
-SurgeryGallary_gachngang_lankham=\ -  l\u1EA7n khám 
-SurgeryGallary_themanhba=Thêm \u1EA3nh before - after
-SurgeryGallary_xoaanh=Xóa \u1EA3nh
+PrescriptionView_tphcmngay=Tp HCM, ng\u00E0y 
+PrescriptionView_tuoi=Tu\u1ED5i\: 
+PrescriptionView_xemghichuthuoc=Xem ghi ch\u00FA thu\u1ED1c
+PrescriptionView_xoadong=X\u00F3a d\u00F2ng
+SurgeryGallary_benhanthu=B\u1EC7nh \u00E1n th\u1EE9 
+SurgeryGallary_gachngang_lankham=\ -  l\u1EA7n kh\u00E1m 
+SurgeryGallary_themanhba=Th\u00EAm \u1EA3nh before - after
+SurgeryGallary_xoaanh=X\u00F3a \u1EA3nh
 SurgeryImageListSelectionDialog_anhphauthuat=\u1EA2nh ph\u1EA9u thu\u1EADt
 SurgeryImageListSelectionDialog_chon=Ch\u1ECDn...
 SurgeryImageListSelectionDialog_chonanhchophauthuat=Ch\u1ECDn file \u1EA3nh cho ph\u1EA9u thu\u1EADt
