--- a/src/com/lehanh/pama/ui/clientcustomer/messages.properties
+++ b/src/com/lehanh/pama/ui/clientcustomer/messages.properties
@@ -1,20 +1,23 @@
-AppointmentTable_ghichu=Ghi chú
+#Eclipse modern messages class
+#Sun Oct 09 17:22:46 ICT 2016
+AppointmentTable_ghichu=Ghi ch\u00FA
 AppointmentTable_hen=H\u1EB9n
-AppointmentTable_thongtinkhach=Thông tin khách
+AppointmentTable_thongtinkhach=Th\u00F4ng tin kh\u00E1ch
 PatientTable_diachi=\u0110\u1ECBa ch\u1EC9
 PatientTable_didong=Di \u0111\u1ED9ng
-PatientTable_gioitinh=Gi\u1EDBi tính
-PatientTable_ngaysinh=Ngày sinh
+PatientTable_gioitinh=Gi\u1EDBi t\u00EDnh
+PatientTable_ngaysinh=Ng\u00E0y sinh
 PatientTable_soid=S\u1ED1 ID
-PatientTable_tenkhach=Tên khách
-TodayUserQueueView_chonngay=Ch\u1ECDn ngày
-TodayUserQueueView_lammoi=Làm m\u1EDBi
+PatientTable_tenkhach=T\u00EAn kh\u00E1ch
+TodayUserQueueView_chonngay=Ch\u1ECDn ng\u00E0y
+TodayUserQueueView_lammoi=L\u00E0m m\u1EDBi
 TodayUserQueueView_loidb=L\u1ED5i Database
-TodayUserQueueView_ngayhen=Ngày h\u1EB9n
-UserSearchView_hoten=H\u1ECD Tên:
+TodayUserQueueView_ngayhen=Ng\u00E0y h\u1EB9n
+UserSearchView_hoten=H\u1ECD T\u00EAn\:
+UserSearchView_lblId_text=ID\:
 UserSearchView_loidb=L\u1ED5i Database
-UserSearchView_ngaygannhat=Ngày g\u1EA7n nh\u1EA5t:
-UserSearchView_nhapngay=Nh\u1EADp ngày
-UserSearchView_sodt=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i:
-UserSearchView_timkiem=Tìm ki\u1EBFm
-UserSearchView_xoaboloc=Xóa b\u1ED9 l\u1ECDc
+UserSearchView_ngaygannhat=Ng\u00E0y g\u1EA7n nh\u1EA5t\:
+UserSearchView_nhapngay=Nh\u1EADp ng\u00E0y
+UserSearchView_sodt=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i\:
+UserSearchView_timkiem=T\u00ECm ki\u1EBFm
+UserSearchView_xoaboloc=X\u00F3a b\u1ED9 l\u1ECDc
