--- a/src/com/lehanh/pama/ui/patientcase/messages.properties
+++ b/src/com/lehanh/pama/ui/patientcase/messages.properties
@@ -1,6 +1,6 @@
 #Eclipse modern messages class
-#Sun Aug 28 12:16:33 ICT 2016
-DetailImageView_hienlankhamtrong=Hi\u1EC7n l\u1EA7n khám tr\u1ED1ng
+#Mon May 01 15:44:21 ICT 2017
+DetailImageView_hienlankhamtrong=Hi\u1EC7n l\u1EA7n kh\u00E1m tr\u1ED1ng
 ExamVersionComboViewer_dangthuchien=\ (\u0111ang th\u1EF1c hi\u1EC7n)
 ExamVersionComboViewer_langannhat=\ (l\u1EA7n g\u1EA7n nh\u1EA5t)
 ExamVersionComboViewer_ngayden=Ng\u00E0y \u0111\u1EBFn
@@ -10,11 +10,14 @@ ExamVersionComboViewer_thutu=Th\u1EE9 t\u1EF1
 PatientCaseView_benhanmoi=B\u1EC7nh \u00E1n m\u1EDBi
 PatientCaseView_bienchung=Bi\u1EBFn ch\u1EE9ng
 PatientCaseView_bstuvan=B\u00E1c s\u1EF9 t\u01B0 v\u1EA5n\:
+PatientCaseView_but_phauthuat=Ph\u1EABu thu\u1EADt
+PatientCaseView_cantaomotbenhantruoc=C\u1EA7n t\u1EA1o m\u1ED9t b\u1EC7nh \u00E1n tr\u01B0\u1EDBc\!
 PatientCaseView_chandoan=Ch\u1EA9n \u0111o\u00E1n\:
 PatientCaseView_chinhsua=Ch\u1EC9nh s\u1EEDa
 PatientCaseView_chon=Ch\u1ECDn
 PatientCaseView_chonbenhan=Ch\u1ECDn b\u1EC7nh \u00E1n\:
 PatientCaseView_chonbs=Ch\u1ECDn BS
+PatientCaseView_chonhoactaobenhnhantruoc=Ch\u1ECDn ho\u1EB7c t\u1EA1o th\u00F4ng tin b\u1EC7nh nh\u00E2n tr\u01B0\u1EDBc khi t\u1EA1o b\u1EC7nh \u00E1n \!
 PatientCaseView_chonlankham=Ch\u1ECDn l\u1EA7n kh\u00E1m\:
 PatientCaseView_de=\u0110\u1EC3\:
 PatientCaseView_dichvu=D\u1ECBch v\u1EE5\:
@@ -22,6 +25,7 @@ PatientCaseView_ghichu=Ghi ch\u00FA\:
 PatientCaseView_ghichutubacsi=Ghi ch\u00FA t\u1EEB b\u00E1c s\u1EF9\:
 PatientCaseView_ghichutukhach=Ghi ch\u00FA t\u1EEB kh\u00E1ch\:
 PatientCaseView_hailong=H\u00E0i l\u00F2ng
+PatientCaseView_huongdan=H\u01B0\u1EDBng d\u1EA9n
 PatientCaseView_huy=H\u1EE7y
 PatientCaseView_inphieu=In phi\u1EBFu
 PatientCaseView_loikhuyencuabs=L\u1EDDi khuy\u00EAn c\u1EE7a b\u00E1c s\u1EF9\:
@@ -32,7 +36,6 @@ PatientCaseView_ngaymo=Ng\u00E0y m\u1ED5
 PatientCaseView_ngaypt=Ng\u00E0y PT\:
 PatientCaseView_ngoaids=Ngo\u00E0i Danh s\u00E1ch\:
 PatientCaseView_phauthuat=Ph\u1EA9u thu\u1EADt\:
-PatientCaseView_thamkham=Th\u0103m kh\u00E1m
 PatientCaseView_thongtinphauthuat=Th\u00F4ng tin ph\u1EA9u thu\u1EADt 
 PatientCaseView_thongtintuvanthamkham=Th\u00F4ng tin t\u01B0 v\u1EA5n - th\u0103m kh\u00E1m
 PatientCaseView_thuthuat=Th\u1EE7 thu\u1EADt\:
@@ -126,3 +129,5 @@ SurgeryGallary_xoaanh=X\u00F3a \u1EA3nh
 SurgeryImageListSelectionDialog_anhphauthuat=\u1EA2nh ph\u1EA9u thu\u1EADt
 SurgeryImageListSelectionDialog_chon=Ch\u1ECDn...
 SurgeryImageListSelectionDialog_chonanhchophauthuat=Ch\u1ECDn file \u1EA3nh cho ph\u1EA9u thu\u1EADt
+SurgeryImageListSelectionDialog_lblFilenh_text=File \u1EA3nh\: 
+SurgeryImageListSelectionDialog_lblNewLabel_text=Ph\u1EABu thu\u1EADt
