--- a/src/com/lehanh/pama/ui/clientcustomer/messages.properties
+++ b/src/com/lehanh/pama/ui/clientcustomer/messages.properties
@@ -14,6 +14,8 @@ TodayUserQueueView_lammoi=L\u00E0m m\u1EDBi
 TodayUserQueueView_loidb=L\u1ED5i Database
 TodayUserQueueView_ngayhen=Ng\u00E0y h\u1EB9n
 UserSearchView_hoten=H\u1ECD T\u00EAn\:
+UserSearchView_ketquatimkiem=K\u1EBFt qu\u1EA3 tìm ki\u1EBFm
+UserSearchView_khongthaybenhnhannao=Không th\u1EA5y b\u1EC7nh nhân nào\!
 UserSearchView_lblId_text=ID\:
 UserSearchView_loidb=L\u1ED5i Database
 UserSearchView_ngaygannhat=Ng\u00E0y g\u1EA7n nh\u1EA5t\:
