--- a/src/com/lehanh/pama/ui/patientcase/messages.properties
+++ b/src/com/lehanh/pama/ui/patientcase/messages.properties
@@ -122,10 +122,12 @@ PrescriptionView_tphcmngay=Tp HCM, ng\u00E0y
 PrescriptionView_tuoi=Tu\u1ED5i\: 
 PrescriptionView_xemghichuthuoc=Xem ghi ch\u00FA thu\u1ED1c
 PrescriptionView_xoadong=X\u00F3a d\u00F2ng
+SurgeryGallary_bancochacmuonxoa=B\u1EA1n có ch\u1EAFc mu\u1ED1n xóa %d \u1EA3nh?
 SurgeryGallary_benhanthu=B\u1EC7nh \u00E1n th\u1EE9 
 SurgeryGallary_gachngang_lankham=\ -  l\u1EA7n kh\u00E1m 
 SurgeryGallary_themanhba=Th\u00EAm \u1EA3nh before - after
 SurgeryGallary_xoaanh=X\u00F3a \u1EA3nh
+SurgeryGallary_xoaanhphauthuathoi=Xóa \u1EA3nh ph\u1EABu thu\u1EADt?
 SurgeryImageListSelectionDialog_anhphauthuat=\u1EA2nh ph\u1EA9u thu\u1EADt
 SurgeryImageListSelectionDialog_chon=Ch\u1ECDn...
 SurgeryImageListSelectionDialog_chonanhchophauthuat=Ch\u1ECDn file \u1EA3nh cho ph\u1EA9u thu\u1EADt
